fix the bug of overflow in bank card selector

--- a/exchange/app/assets/stylesheets/main.less
+++ b/exchange/app/assets/stylesheets/main.less
@@ -1032,6 +1032,7 @@ div.legal {
 .dropdown-menu a {
     float: left;
     width: 90%;
+    overflow-x: hidden;
 }
 
 .dropdown-menu .glyphicon {
